<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/__home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/__contact"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/__order"
        android:title="@string/title_notification" />
<!--    <item-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:icon="@drawable/____chat"-->
<!--        android:title="@string/title_n" />-->
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/__my"
        android:title="@string/title_user" />
</menu>
