<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="10dp"
    android:background="@drawable/white_border">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/order_id"
        android:textSize="@dimen/text_size"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_time"
        android:textSize="@dimen/text_size"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/textView15"
         />

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textViewTime"
        app:layout_constraintTop_toTopOf="@+id/textViewTime" />


    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_order_time"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/start"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/end"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/tv_start"
        app:layout_constraintTop_toTopOf="@+id/tv_start" />

    <TextView
        android:id="@+id/tv_end"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <TextView
        android:id="@+id/tv_name_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/owner"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/tv_nick_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/tv_name_type"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/account"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/tv_nick_name"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textView24" />


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textViewWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/tv_phone"/>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/textViewWeightLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewWeightLabel" />

    <!-- 接受订单按钮 -->
    <Button
        android:id="@+id/btn_accept_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#ED5D5D"
        android:text="@string/accept_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
</androidx.constraintlayout.widget.ConstraintLayout>